package com.telenav.kivakit.ui.swing.theme;

import com.telenav.kivakit.ui.swing.graphics.color.Color;
import com.telenav.kivakit.ui.swing.graphics.color.KivaKitColors;

/**
 * @author jonathanl (shibo)
 */
public class KivaKitVanHelsingTheme extends KivaKitTheme
{
    @Override
    public Color colorBorder()
    {
        return KivaKitColors.FOSSIL;
    }

    @Override
    public Color colorCaret()
    {
        return KivaKitColors.AQUA;
    }

    @Override
    public Color colorComponentLabel()
    {
        return KivaKitColors.SILVER;
    }

    @Override
    public Color colorDropdownBackground()
    {
        return KivaKitColors.BLACK_OLIVE;
    }

    @Override
    public Color colorDropdownText()
    {
        return KivaKitColors.TANGERINE;
    }

    @Override
    public Color colorError()
    {
        return KivaKitColors.CHERRY;
    }

    @Override
    public Color colorFadedText()
    {
        return KivaKitColors.FOSSIL;
    }

    @Override
    public Color colorInformation()
    {
        return KivaKitColors.PEWTER;
    }

    @Override
    public Color colorInformationLabel()
    {
        return KivaKitColors.BLUE_RIDGE_MOUNTAINS;
    }

    @Override
    public Color colorNote()
    {
        return Color.GRAY;
    }

    @Override
    public Color colorProgressBarBackground()
    {
        return KivaKitColors.IRON;
    }

    @Override
    public Color colorProgressBarForeground()
    {
        return KivaKitColors.SILVER;
    }

    @Override
    public Color colorQuibble()
    {
        return KivaKitColors.DARK_KIVAKIT_YELLOW;
    }

    @Override
    public Color colorSelectionBackground()
    {
        return KivaKitColors.OCEAN;
    }

    @Override
    public Color colorSelectionText()
    {
        return KivaKitColors.WHITE_SMOKE;
    }

    @Override
    public Color colorSeparator()
    {
        return colorBorder();
    }

    @Override
    public Color colorShadedPanel()
    {
        return KivaKitColors.PLATINUM;
    }

    @Override
    public Color colorShadedSubPanel()
    {
        return KivaKitColors.SILVER;
    }

    @Override
    public Color colorSuccess()
    {
        return KivaKitColors.CLOVER;
    }

    @Override
    public Color colorTableBackground()
    {
        return KivaKitColors.BLACK_OLIVE;
    }

    @Override
    public Color colorTableHeaderBackground()
    {
        return KivaKitColors.WHITE;
    }

    @Override
    public Color colorTableHeaderText()
    {
        return KivaKitColors.CHARCOAL;
    }

    @Override
    public Color colorTableText()
    {
        return KivaKitColors.TANGERINE;
    }

    @Override
    public Color colorText()
    {
        return KivaKitColors.CHARCOAL;
    }

    @Override
    public Color colorTextAreaBackground()
    {
        return KivaKitColors.BLACK_OLIVE;
    }

    @Override
    public Color colorTextFieldBackground()
    {
        return KivaKitColors.BLACK_OLIVE;
    }

    @Override
    public Color colorTextFieldText()
    {
        return KivaKitColors.TANGERINE;
    }

    @Override
    public Color colorTitle()
    {
        return KivaKitColors.DARK_CHARCOAL;
    }

    @Override
    public Color colorTitleBackground()
    {
        return KivaKitColors.DARK_CHARCOAL;
    }

    @Override
    public Color colorWarning()
    {
        return KivaKitColors.TANGERINE;
    }

    @Override
    public boolean isDark()
    {
        return false;
    }
}
